[package]
name = "letslogic"
version = "0.1.1"
edition = "2021"

authors = ["ShenMian <sms_school@outlook.com>"]
license = "MIT OR Apache-2.0"

description = "A library providing interaction with the Let's Logic API"
repository = "https://github.com/ShenMian/letslogic"
keywords = ["sokoban"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
thiserror = "2.0"
zip = "2.2"

[dev-dependencies]
dotenv = "0.15"
indoc = "2.0"
tokio = { version = "1.38", features = ["full"] }
